fix center align

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,17 @@
+html, body, #root {
+	padding: 0;
+	margin: 0;
+	width: 100%;
+	height: 100vh;
+	overflow: hidden;
+	flex-wrap: wrap;
+}
+
 .App {
+	height: 100%;
 	display: flex;
 	justify-content: center;
-	flex-wrap: wrap;
-
-	padding: 15%;
+	align-items: center;
 }
 
 .soft-padding {
@@ -11,9 +19,7 @@
 }
 
 .quote-box {
-	width: 80%;
-	height: 55%;
-
+	width: 60%;
 	background-color: #ffff;
 	border-radius: 10px 0;
 }
